--- a/.github/workflows/pythopackage.yml
+++ b/.github/workflows/pythopackage.yml
@@ -33,6 +33,6 @@ jobs:
       run: |
         pip install pytest
         pytest
-    - name: Run tox
+    - name: Test all with tox
       run: |
         tox
