--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,20 @@
 [tox]
-envlist = py35,py36,py37
+envlist = py35,py36,py37,py38
 
 [testenv]
 deps = 
     -rrequirements.txt
     -rrequirements-dev.txt
+passenv = *
+
 commands =
-    py.test
+    py.test --cov=napalm_arubaoss --cov-report term-missing -vs --pylama {posargs}
+
+[testenv:pylama]
+deps =
+    -rrequirements-dev.txt
+
+basepython = python3.6
+commands =
+    pylama .
+
